[package]
name = "power-bank"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.19"
embedded-graphics = "0.8.1"
embedded-graphics-simulator = "0.6.0"
embedded-text = "0.5.0"
profont = "0.7.0"
tinybmp = "0.6.0"

embassy-sync = { version = "0.6.0", features = ["log"] }
embassy-executor = { version = "0.6.0", features = ["task-arena-size-32768", "arch-std", "executor-thread", "log", "integrated-timers"] }
embassy-time = { version = "0.3.2", features = ["log", "std", ] }