[package]
name = "power-bank"
version = "0.1.0"
edition = "2021"

[dependencies]
embedded-graphics = "0.8.1"
chrono = "0.4.19"
embedded-text = "0.5.0"
profont = "0.7.0"
tinybmp = "0.6.0"

embedded-graphics-simulator = { version = "0.6.0" , optional = true}

embassy-executor = { version = "0.6.0", features = ["executor-thread", "integrated-timers"]  , optional = true}
embassy-time = { version = "0.3.2", optional = true}

cortex-m-semihosting = { version = "0.5"  , optional = true}
cortex-m = { version = "0.7", features = ["critical-section-single-core"] , optional = true}
cortex-m-rt = { version = "0.7", optional = true}
panic-probe = { version = "0.3", features = ["print-defmt"] , optional = true}

defmt-rtt = { version = "0.4", optional = true}
defmt = { version = "0.3", optional = true }

embedded-hal = { version = "1.0.0-alpha11" , optional = true }
embedded-hal-async =  { version = "1.0" , optional = true }
embedded-io =  { version = "0.6" , optional = true }



py32-bind-hal = { version = "0.5", path = "../../../2-bind-hal/bind-hal" , optional = true }


[features]
default = ["device-simulator"]

device-simulator = [
    "embedded-graphics-simulator",
    "embassy-executor/task-arena-size-32768",
    "embassy-executor/arch-std",
    "embassy-executor/log",
    "embassy-time/log", 
    "embassy-time/std",
]

device-arm = [
    "embassy-time/tick-hz-1_000",
    "embassy-executor/arch-cortex-m",
    "cortex-m",
    "cortex-m-rt",
    "cortex-m-semihosting",
    "panic-probe",
    "defmt-rtt",
    "defmt",
    "embedded-io",
    "embedded-hal",
    "embedded-hal-async",
]

device-py32 = [
    "device-arm", 
    "py32-bind-hal",
]


